<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="260dp"
    tools:context="com.irewind.activities.IRAddCommentActivity"
    android:padding="5dp"
    android:layout_margin="10dp"
    android:background="@color/gray_light_video">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:layout_centerVertical="true"
            android:src="@drawable/btn_close_slide" />

        <TextView
            android:id="@+id/commentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/post_comment"
            android:textSize="16sp"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_red"
            android:textSize="16sp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:text="@string/post" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top"
        android:layout_marginTop="10dp"
        android:background="@android:color/white">

        <com.irewind.ui.views.RoundedImageView
            android:id="@+id/profileImageComment"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="5dp"
            android:src="@drawable/img_default_picture"/>

        <EditText
            android:id="@+id/commentEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/profileImageComment"
            android:layout_marginTop="18dp"
            android:hint="@string/comment_hint"
            android:textSize="14sp"
            android:inputType="textMultiLine"
            android:background="@android:color/transparent"/>
    </RelativeLayout>
</RelativeLayout>
