<?xml version="1.0" encoding="UTF-8"?><!-- Copyright (C) 2014 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true">

    <com.google.android.exoplayer.VideoSurfaceView
        android:id="@+id/surface_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center" />

    <com.google.android.exoplayer.text.SubtitleView
        android:id="@+id/subtitles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="32dp"
        android:visibility="invisible" />

    <View
        android:id="@+id/shutter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black" />

    <ImageButton
        android:layout_width="70dip"
        android:layout_height="70dip"
        android:layout_gravity="center"
        android:visibility="gone"
        android:background="@android:color/transparent"
        android:id="@+id/btnPlayPause" />

    <fr.castorflex.android.circularprogressbar.CircularProgressBar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/videoProgress"
        android:layout_width="48dp"
        android:layout_height="48dp"
       android:layout_gravity="center"
        android:indeterminate="true"
        app:cpb_color="@color/text_red"
        app:cpb_max_sweep_angle="300"
        app:cpb_min_sweep_angle="10"
        app:cpb_rotation_speed="1.0"
        app:cpb_stroke_width="4dp"
        app:cpb_sweep_speed="1.0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#88000000"
        android:orientation="vertical">

        <TextView
            android:id="@+id/player_state_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/debug_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <LinearLayout
            android:id="@+id/controls_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:id="@+id/video_controls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video"
                style="@style/DemoButton"
                android:visibility="gone"
                android:onClick="showVideoPopup" />

            <Button
                android:id="@+id/audio_controls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/audio"
                style="@style/DemoButton"
                android:visibility="gone"
                android:onClick="showAudioPopup" />

            <Button
                android:id="@+id/text_controls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text"
                style="@style/DemoButton"
                android:visibility="gone"
                android:onClick="showTextPopup" />

            <Button
                android:id="@+id/verbose_log_controls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logging"
                style="@style/DemoButton"
                android:onClick="showVerboseLogPopup" />

            <Button
                android:id="@+id/retry_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retry"
                android:visibility="gone"
                style="@style/DemoButton" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>