<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.irewind.fragments.IRAccountFragment"
    tools:ignore="MissingPrefix">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/backgroundImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_profile" />

        <ImageButton
            android:id="@+id/photo"
            android:layout_width="30dp"
            android:layout_height="31dp"
            android:src="@drawable/ic_camera"
            android:scaleType="fitCenter"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">


            <com.irewind.ui.views.RoundedImageView
                android:id="@+id/profileImageView"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:scaleType="fitXY"
                android:src="@drawable/img_default_picture" />

            <TextView
                fontPath="fonts/OpenSans-Regular.ttf"
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profileImageView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp"
                android:text=""
                android:textColor="@android:color/white"
                android:textSize="17sp" />

            <TextView
                fontPath="fonts/OpenSans-Regular.ttf"
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameTextView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp"
                android:text="Joined: 6 months ago"
                android:textColor="#bbb"
                android:textSize="15sp" />
        </RelativeLayout>
    </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/top"
            android:clipToPadding="false"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/personal_data"
                            android:layout_marginTop="5dp"
                            android:layout_marginLeft="10dp"
                            android:textSize="16sp"/>
                    </LinearLayout>

                    <Button
                        android:id="@+id/changeName"
                        android:layout_width="70dp"
                        android:layout_height="38dp"
                        android:text="@string/change_caps"
                        android:textColor="@drawable/red_text_account_color_change"
                        android:background="@drawable/btn_red"
                        android:layout_marginRight="10dp"
                        android:textSize="12sp"
                        android:layout_gravity="center_vertical" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray_light_video" />

                <LinearLayout
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/upper_password"
                            android:layout_marginTop="5dp"
                            android:layout_marginLeft="10dp"
                            android:textSize="16sp"/>
                    </LinearLayout>

                    <Button
                        android:id="@+id/changePassword"
                        android:layout_width="70dp"
                        android:layout_height="38dp"
                        android:text="@string/change_caps"
                        android:textColor="@drawable/red_text_account_color_change"
                        android:background="@drawable/btn_red"
                        android:layout_marginRight="10dp"
                        android:textSize="12sp"
                        android:layout_gravity="center_vertical" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray_light_video" />

                <LinearLayout
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/notif_email"
                            android:layout_marginTop="5dp"
                            android:layout_marginLeft="10dp"
                            android:textSize="16sp"/>
                    </LinearLayout>

                    <Button
                        android:id="@+id/editNotifs"
                        android:layout_width="70dp"
                        android:layout_height="38dp"
                        android:text="@string/edit"
                        android:textColor="@drawable/red_text_account_color_change"
                        android:background="@drawable/btn_red"
                        android:layout_marginRight="10dp"
                        android:textSize="12sp"
                        android:layout_gravity="center_vertical" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnLogout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:textColor="@drawable/ir_text_color_change"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/btn_all_red" />

            </LinearLayout>
        </ScrollView>
</RelativeLayout>
